2014-09-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: no longer export logm.Higham08
	* R/expm2.R (expm.AlMoHi09): new  expm(x, method = "AlMohy-Hi09")
	* src/matexp_MH09.c: thanks to Drew Schmidt.

2014-09-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/matpow.c: need to carefully REPROTECT x_

2011-11-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/balance.Rd: use new name balance() instead of dgebal()
	* R/balance.R:

2011-10-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/matexp.f (matexpRBS): do not call STOP ..
	* NAMESPACE: import rowSums from Matrix (because of its
	sparseMatrix method).
	* R/expm.R (expm): auto-coerce sparse matrices to dense, when
	"needed".

2011-10-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm_vec.R (expAtv): finally add the functionality for
	'exp(A*t) %*% v' Ravi had translated from EXPOKIT in August.

2011-08-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm.R (expm): add new method "PadeRBS" (Roger B. Sidje),
	interfacing to the corresponding Fortran code.
	* src/init.c, src/expm.h: also namespace-ify the Fortran symbols.

2011-08-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: also import solve() from Matrix, for sparse expm()

2011-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.98-4
		(Suggests): RColorBrewer, sfsmisc -- used in examples

	* inst/doc/expm.Rnw: replace the few non-ASCII chars by LaTeX.

2010-08-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/logm.Higham08.R (logm.Higham08): force argument to Schur(.) to
	be dense for now  (working around infelicitous Matrix method).
	(logm.Higham08): catch case of infinite loop

	* man/logm.Rd: add example of the above.

2010-07-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.98-2

	* src/matpow.c (R_matpow): fix modify-argument bug in %^%.
	Thanks to stackflow-user "gd047" for reporting it.
