@@ -2,13 +2,14 @@ Package: expm
 Type: Package
 Title: Matrix Exponential
 Version: 0.999-0
-Date: 2015-02-16
+Date: 2015-10-06
 Author: Vincent Goulet, Christophe Dutang, Martin Maechler,
 	David Firth, Marina Shapira, Michael Stadelmann,
 	expm-developers@lists.R-forge.R-project.org
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Description: Computation of the matrix exponential, logarithm, and related quantities.
 Depends: Matrix
+Imports: methods
 Suggests: RColorBrewer, sfsmisc, Rmpfr
 BuildResaveData: no
 License: GPL (>= 2)
